--- a/website/templates/admin.html
+++ b/website/templates/admin.html
@@ -301,8 +301,8 @@
   function generateTable(data) {
     const start = (currentPage - 1) * itemsPerPage;
     const paginatedData = data.slice(start, start + itemsPerPage);
+    const isNotGraduatingOnTimeSlide = carouselData[currentSlide].title === "STUDENTS AT RISK";
     const isGraduatingOnTimeSlide = carouselData[currentSlide].title === "STUDENTS GRADUATING ON TIME";
-    const isAtRiskSlide = carouselData[currentSlide].title === "STUDENTS AT RISK";  // Check for "At Risk" slide
     const isWithoutPredictionSlide = carouselData[currentSlide].title === "STUDENTS WITHOUT PREDICTION";
 
     // Check if there are no students in the data
@@ -322,10 +322,10 @@
                     <tr class="bgTr">
                         <th class="centerUpdateDashboard">STUDID</th>
                         <th class="centerUpdateDashboard">STUDENT NAME</th>
-                        ${isGraduatingOnTimeSlide || isAtRiskSlide ? `  <!-- Show Percentage for At Risk and On Time -->
+                        ${isGraduatingOnTimeSlide || isNotGraduatingOnTimeSlide ? `
                             <th class="centerUpdateDashboard">PERCENTAGE</th>
                         ` : ""}
-                        ${isGraduatingOnTimeSlide || isWithoutPredictionSlide || isAtRiskSlide ? "" : `
+                        ${isGraduatingOnTimeSlide || isWithoutPredictionSlide ? "" : `
                             <th class="centerUpdateDashboard">FACTORS</th>
                             <th class="centerUpdateDashboard">INTERVENTION</th>
                         `}
@@ -339,15 +339,15 @@
         <tr class="highlight-row">
         <td class="centerUpdateDashboard" data-label="STUDID">${item.id}</td>
         <td class="centerUpdateDashboard" data-label="STUDENT NAME">${item.name}</td>
-        ${isGraduatingOnTimeSlide || isAtRiskSlide ? `
+        ${isGraduatingOnTimeSlide || isNotGraduatingOnTimeSlide ? `
             <td class="centerUpdateDashboard" data-label="PERCENTAGE">${item.percentage || ""}</td>
         ` : ""}
-        ${isGraduatingOnTimeSlide || isWithoutPredictionSlide || isAtRiskSlide ? "" : `
+        ${isGraduatingOnTimeSlide || isWithoutPredictionSlide ? "" : `
             <td class="centerUpdateDashboard" data-label="FACTOR">${item.factor || ""}</td>
             <td class="centerUpdateDashboard" data-label="INTERVENTION">${item.intervention || ""}</td>
         `}
       </tr>
-  `;
+    `;
     });
 
     tableContent += `
@@ -358,7 +358,9 @@
 `;
 
     return tableContent;
-  } a
+
+
+  }
 
   function changePage(direction) {
     const totalPages = Math.ceil(carouselData[currentSlide].data.length / itemsPerPage);
