Updated Upload File and New About Us

--- a/website/templates/adminMaintenance.html
+++ b/website/templates/adminMaintenance.html
@@ -649,12 +649,12 @@
                                     required></textarea>
                             </div>
 
-                            <!-- Picture Upload Field -->
+                            <!-- Picture Upload Field
                             <div class="input-group">
                                 <label for="picture" class="label">Upload Picture</label>
                                 <input type="file" id="fileEvent" name="picture" accept="image/*" class="inputFileEvent"
                                     required>
-                            </div>
+                            </div>-->
 
                             <!-- Location Field -->
                             <div class="input-group">
