--- a/website/templates/testPage.html
+++ b/website/templates/testPage.html
@@ -18,7 +18,7 @@
   <a href="{{ url_for('auth.logout') }}">
     <ion-icon name="chevron-back-circle" class="sticky-icon"></ion-icon>
   </a>
-  
+
 
 
   <!-- =============== Main ================ -->
@@ -28,7 +28,7 @@
     </div>
 
     <div class="card__container">
-      <article class="card__article card__green">
+      <article class="card__article card__orange">
         <div class="card__scale-1"></div>
         <div class="card__scale-2"></div>
 
@@ -40,13 +40,13 @@
           <h2 class="card__title">DELNARD R. CANTOR</h2>
 
           <p class="card__description">
-            SYSTEM ANALYST
+            System Analyst, Lead Developer
           </p>
 
         </div>
       </article>
 
-      <article class="card__article card__green">
+      <article class="card__article card__orange">
         <div class="card__scale-1"></div>
         <div class="card__scale-2"></div>
 
@@ -57,13 +57,13 @@
           <h2 class="card__title">KYLLE JASPER J. LAVILLA</h2>
 
           <p class="card__description">
-            DATA ANALYST
+            Data Analyst, Asst. Developer
           </p>
 
         </div>
       </article>
 
-      <article class="card__article card__green">
+      <article class="card__article card__orange">
         <div class="card__scale-1"></div>
         <div class="card__scale-2"></div>
 
@@ -74,7 +74,7 @@
           <h2 class="card__title">JOHN PAUL B. MARTINEZ</h2>
 
           <p class="card__description">
-            PROJECT MANAGER
+            Project Manager, Developer
           </p>
 
         </div>
@@ -83,35 +83,54 @@
 
     <div class="aboutContent">
       <h2>PREDICTING TIMELY PROGRAM COMPLETION OF BSIT STUDENTS USING LOGISTIC REGRESSION ANALYSIS</h2>
-      <p>A logistic regression analysis was used to predict timely graduation rates for Bachelor of Science in Information
+      <p>A logistic regression analysis was used to predict timely graduation rates for Bachelor of Science in
+        Information
         Technology (BSIT) students at Pamantasan ng Lungsod ng Pasig (PLP) based on their academic, socioeconomic, and
         behavioral factors. The model comprises a dataset ranging from student records from the classes of 2020 to 2023
         and has an accuracy of 86.23% in predicting students at risk. Interventions are carried out on the identified
         factors of at-risk students. Students with academic challenges will have additional academic requirements to
-        support their learning. Those under the socioeconomic factor will be encouraged to participate in events to equip
+        support their learning. Those under the socioeconomic factor will be encouraged to participate in events to
+        equip
         them with relevant resources and support for their circumstances. Students with behavioral challenges will be
         encouraged to consult the guidance counselor on their concerns. These interventions are prompted when the system
         identifies a student at risk of not graduating on time. These also contribute toward increasing graduation rates
         at PLP, which leads to the effective use of institutional resources and better student outcomes.</p>
     </div>
 
+    <div class="aboutContentThree">
+      <h2>WATCH OUR PRESENTATION</h2>
+      <div class="videoContainer">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/PnKFcbB1hPY?si=gdo4ddLPsQKduOnb"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
+    </div>
+
     <div class="aboutContentTwo">
       <img src="{{ url_for('static', filename='images/aboutUs.jpg') }}" alt="The Developers" class="aboutImage">
       <div class="aboutText">
         <p>
-          First and foremost, we give God, the Almighty, praise and thanks for his blessings throughout this capstone project
-          and for enabling us to successfully complete it. For his excellent support during this project, our capstone coordinator,
+          First and foremost, we give God, the Almighty, praise and thanks for his blessings throughout this capstone
+          project
+          and for enabling us to successfully complete it. For his excellent support during this project, our capstone
+          coordinator,
           Prof. Federico G. Nueva, MT, has our warmest gratitude.
         </p>
         <p>
-          Prof. Riegie Dy Tan, DIT, our capstone adviser and college dean, thank you for continually reminding us of the capstone
-          project process. You always inspire us every day by giving us a confidence boost and providing us with some encouragement.
-          Lastly, we thank our family for their unwavering support throughout this journey. They have never stopped cheering us on,
+          Prof. Riegie Dy Tan, DIT, our capstone adviser and college dean, thank you for continually reminding us of the
+          capstone
+          project process. You always inspire us every day by giving us a confidence boost and providing us with some
+          encouragement.
+          Lastly, we thank our family for their unwavering support throughout this journey. They have never stopped
+          cheering us on,
           helping us out financially when we needed it, and having faith in our ability to finish this capstone project.
         </p>
         <p>
-          Researchers also thank the respondents for allowing us to have their evaluation and feedback on our developed system, and
-          we find their evaluation helpful for further improvement of the system. This cannot be possible without everyone’s effort
+          Researchers also thank the respondents for allowing us to have their evaluation and feedback on our developed
+          system, and
+          we find their evaluation helpful for further improvement of the system. This cannot be possible without
+          everyone’s effort
           and support. Thank you all so much. To God be the glory.
         </p>
       </div>
