Updated About Us

--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -119,7 +119,7 @@
     <!-- Footer -->
       <footer class="footer">
         <div class="container text-center">
-          <a href="testPage" class="footer-link">
+          <a href="aboutUs" class="footer-link">
             <p>&copy; 2024 Pamantasan ng Lungsod ng Pasig. All Rights Reserved.</p>
           </a>
             <p>Predicting Timely Program Completion of BSIT Students Using Logistic Regression Analysis.</p>
