--- a/website/templates/testPage.html
+++ b/website/templates/testPage.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="card__container">
-      <article class="card__article card__orange">
+      <article class="card__article card__green">
         <div class="card__scale-1"></div>
         <div class="card__scale-2"></div>
 
@@ -46,7 +46,7 @@
         </div>
       </article>
 
-      <article class="card__article card__orange">
+      <article class="card__article card__green">
         <div class="card__scale-1"></div>
         <div class="card__scale-2"></div>
 
@@ -63,7 +63,7 @@
         </div>
       </article>
 
-      <article class="card__article card__orange">
+      <article class="card__article card__green">
         <div class="card__scale-1"></div>
         <div class="card__scale-2"></div>
 
