--- a/website/templates/admin.html
+++ b/website/templates/admin.html
@@ -86,6 +86,7 @@
     {% else %}
     <h1>ERROR FETCHING USERNAME</h1>
     {% endif %}
+  
   </div>
 
   <!-- ====== Cards for Total Numbers ====== -->
@@ -213,6 +214,12 @@
         </div>
       </div>
     </div>
+  </div>
+
+  <div class="inputData">
+    <form action="/generate_report" method="post">
+      <button type="submit" class="btnsa">GENERATE REPORT</button>
+    </form>
   </div>
 </div>
 
